--- a/app/src/main/res/layout/teacher_educational_info_layout.xml
+++ b/app/src/main/res/layout/teacher_educational_info_layout.xml
@@ -181,7 +181,7 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <!--<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -226,7 +226,7 @@
             </LinearLayout>
 
 
-        </LinearLayout>
+        </LinearLayout>-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -240,6 +240,7 @@
                 android:text="Id Card : "/>
 
             <ImageView
+                android:id="@+id/id_card_image_view_id"
                 android:layout_width="0dp"
                 android:layout_weight="70"
                 android:layout_height="200dp"
