image click fetches from device

--- a/app/src/main/res/layout/teacher_educational_info_layout.xml
+++ b/app/src/main/res/layout/teacher_educational_info_layout.xml
@@ -243,9 +243,7 @@
                 android:id="@+id/id_card_image_view_id"
                 android:layout_width="0dp"
                 android:layout_weight="70"
-                android:layout_height="200dp"
-                android:src="@mipmap/ic_launcher"
-                />
+                android:layout_height="200dp"/>
 
         </LinearLayout>
 
