--- a/app/src/main/res/layout/student_profile_info.xml
+++ b/app/src/main/res/layout/student_profile_info.xml
@@ -29,6 +29,7 @@
                 android:text="Id Card : "/>
 
             <ImageView
+                android:id="@+id/student_id_card_image_view_id"
                 android:layout_width="0dp"
                 android:layout_weight="70"
                 android:layout_height="200dp"
