--- a/app/src/main/res/menu/activity_nav_drawer_items.xml
+++ b/app/src/main/res/menu/activity_nav_drawer_items.xml
@@ -35,7 +35,7 @@
             <item
                 android:id="@+id/nav_phone_admin_id"
                 android:icon="@drawable/phone_call"
-                android:title="Call Admin" />
+                android:title="01521498113" />
 
             <!--<item
                 android:id="@+id/nav_share"
