--- a/app/src/main/res/layout/student_profile_info.xml
+++ b/app/src/main/res/layout/student_profile_info.xml
@@ -33,7 +33,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="70"
                 android:layout_height="200dp"
-                android:src="@mipmap/ic_launcher"
+                android:src="@drawable/id_card"
                 />
 
         </LinearLayout>
