--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,6 +28,14 @@
         android:layout_weight="80"
         android:gravity="center_horizontal">
 
+        <TextView
+            android:id="@+id/email_response_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:gravity="center"
+            android:text="Email successfully send"/>
+
         <EditText
             android:id="@+id/usernameEditText_id"
             android:layout_width="match_parent"
@@ -47,6 +55,7 @@
             android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/password_holder_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColorHint="@color/colorAccent"
@@ -62,9 +71,19 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <Button
+                android:id="@+id/send_password_id"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:text="Send Password"
+                android:onClick="btnClicked"
+                android:background="@drawable/ic_login_button"/>
+
             <TextView
+                android:id="@+id/forgot_password_text_view_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="btnClicked"
                 android:padding="10dp"
                 android:text="Forgot Password?"/>
         </LinearLayout>
@@ -85,6 +104,7 @@
             android:background="@drawable/ic_login_button"/>
 
         <LinearLayout
+            android:id="@+id/signupBtn_linear_layout_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -120,6 +140,16 @@
                 android:text="SIGNUP AS TEACHER" />
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/back_id"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="15dp"
+            android:text="Back"
+            android:onClick="btnClicked"
+            android:background="@drawable/ic_login_button"/>
 
     </RelativeLayout>
 
