--- a/app/src/main/res/menu/activity_nav_drawer_items.xml
+++ b/app/src/main/res/menu/activity_nav_drawer_items.xml
@@ -29,7 +29,7 @@
 
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Call Admin">
         <menu>
 
             <item
@@ -37,14 +37,6 @@
                 android:icon="@drawable/phone_call"
                 android:title="01521498113" />
 
-            <!--<item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />-->
         </menu>
     </item>
 
