--- a/app/src/main/res/layout/teacher_educational_info_layout.xml
+++ b/app/src/main/res/layout/teacher_educational_info_layout.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -10,10 +10,13 @@
         android:orientation="vertical">
 
         <Button
+            android:layout_marginTop="15dp"
             android:id="@+id/edit_education_info_btn_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#33b5e5"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="15dp"
             android:layout_gravity="right"
             android:text="Edit"/>
 
@@ -57,7 +60,6 @@
 
 
         </LinearLayout>
-
         <TextView
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -181,61 +183,16 @@
 
         </LinearLayout>
 
-        <!--<LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_weight="50"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="From : " />
-
-                <EditText
-                    android:id="@+id/from_edit_view_id"
-                    android:layout_width="match_parent"
-                    android:inputType="date"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="50"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TO : " />
-
-                <EditText
-                    android:id="@+id/to_edit_view_id"
-                    android:layout_width="match_parent"
-                    android:inputType="date"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-
-
-        </LinearLayout>-->
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="15dp">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_weight="30"
                 android:layout_gravity="center"
+                android:textStyle="bold"
                 android:layout_height="wrap_content"
                 android:text="Id Card : "/>
 
@@ -250,7 +207,8 @@
 
         <Button
             android:id="@+id/save_education_info_btn_id"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_margin="10dp"
             android:layout_height="wrap_content"
             android:background="#00c851"
             android:layout_gravity="right"
