--- a/app/src/main/res/layout/teacher_personal_info_layout.xml
+++ b/app/src/main/res/layout/teacher_personal_info_layout.xml
@@ -109,7 +109,6 @@
 
 
         </LinearLayout>
-
         <TextView
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -150,7 +149,8 @@
 
             <Button
                 android:id="@+id/save_personal_info_btn_id"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_marginTop="10dp"
                 android:layout_height="wrap_content"
                 android:background="#00c851"
                 android:layout_gravity="right"
