--- a/app/src/main/res/layout/job_feed_layout.xml
+++ b/app/src/main/res/layout/job_feed_layout.xml
@@ -266,6 +266,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
+                android:textColor="@android:color/holo_blue_dark"
                 android:background="#66BB6A"
                 android:text="Interested" />
 
