--- a/app/src/main/res/layout/header_nav_drawer.xml
+++ b/app/src/main/res/layout/header_nav_drawer.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:text="user email"
         android:layout_marginTop="16dp"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/white"/>
 
     <TextView
         android:id="@+id/text_View_User_Name_id"
@@ -35,16 +35,18 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="user name"
+        android:textAllCaps="true"
         android:layout_marginTop="10dp"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/white" />
 
     <TextView
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content"
         android:text="user type"
+        android:textAllCaps="true"
         android:id="@+id/user_type_text_view_id"
         android:layout_marginTop="10dp"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/white"/>
 
 </LinearLayout>
