--- a/app/src/main/res/layout/teacher_profile_tab_layout.xml
+++ b/app/src/main/res/layout/teacher_profile_tab_layout.xml
@@ -9,7 +9,7 @@
         style="@style/CategoryTab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark" />
+        android:background="@color/colorAccent" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
