--- a/app/src/main/res/layout/payment_fragment_layout.xml
+++ b/app/src/main/res/layout/payment_fragment_layout.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!--<ImageView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/payments"/>-->
+        android:src="@drawable/payments"/>
 
 </LinearLayout>
